Modift social links and cursor pointer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header full">
         <div class="logo">Blogin<span>.</span></div>
         <nav class="main-nav">
-            <ul class="main-nav-list clean_list flex">
+            <ul class="main-nav-list clean-list flex">
                 <li><a href="#">Journal</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Work</a></li>
@@ -58,7 +58,7 @@
         <div class="logo">Blogin<span>.</span></div>
         <small class="footer-rights">© 2014 Blogin.com - All Rights Reserved - Find more free Templates at
             Pixelhint.com</small>
-        <ul class="footer-social .clean_list">
+        <ul class="footer-social clean-list">
             <li><a href="#">F</a></li>
             <li><a href="#">L</a></li>
             <li><a href="#">E</a></li>
