Add font face family fa media

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <small class="footer-rights">© 2014 Blogin.com - All Rights Reserved - Find more free Templates at
             Pixelhint.com</small>
         <ul class="footer-social clean-list">
-            <li><a href="#">F</a></li>
-            <li><a href="#">L</a></li>
-            <li><a href="#">E</a></li>
-            <li><a href="#">D</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
         </ul>
     </footer>
 </body>
