modify media fa

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <small class="footer-rights">© 2014 Blogin.com - All Rights Reserved - Find more free Templates at
             Pixelhint.com</small>
         <ul class="footer-social clean-list">
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a class=" fa facebook" href="#"></a></li>
+            <li><a class=" fa twitter" href="#"></a></li>
+            <li><a class=" fa behance" href="#"></a></li>
+            <li><a class=" fa dribbble" href="#"></a></li>
         </ul>
     </footer>
 </body>
