linking main screen component to stylecss

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="app main-layout menu-open">
+    <div class="main-screen"></div>
     <header class="main-header full">
         <div class="logo">Blogin<span>.</span></div>
         <nav class="main-nav">
