--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="app main-layout menu-open">
-    <div class="main-screen"></div>
+    <div class="main-screen" onClick="toggleMenu()"></div>
     <header class="main-header full">
         <div class="logo">Blogin<span>.</span></div>
         <nav class="main-nav">
